<resources>
    <string name="app_name">NAW</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">log in</string>
    <string name="or_text">Or</string>
    <string name="create_acc_text">Create account</string>
    <string name="username_hint">Username</string>
    <string name="menu_title">Add thoughts</string>
    <string name="signout">Signout</string>
    <string name="join_text">JOIN</string>
    <string name="save">SAVE</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="weight_class">Weight class:</string>
    <string name="default_username">David Elfving Long</string>
    <string name="default_last_updated">Last updated:</string>
    <string name="sex_cont_desc">users sex</string>
    <string name="user_sex_text">Sex</string>
    <string name="default_user_sex_text">Male</string>
    <string name="height_cont_desc">user height image</string>
    <string name="user_height">Height</string>
    <string name="default_user_height">184 cm</string>
    <string name="measurement_symbol">measurement symbol</string>
    <string name="forearm_size">Forearm size</string>
    <string name="default_user_forearm_size">34 cm</string>
    <string name="bicep_size_text">Bicep size</string>
    <string name="default_bicep_size">43 cm</string>
    <string name="weight_cont_desc">user weight symbol</string>
    <string name="weight_class_text">Weight class</string>
    <string name="default_user_weight">100 kg</string>
    <string name="hometown_cont_desc">user location marker</string>
    <string name="hometown_text">Hometown</string>
    <string name="default_hometown_text">Örnsköldsvik</string>
    <string name="height_cm">Height (cm)</string>
    <string name="sex_hint">Sex</string>
    <string name="forearm_size_cm">Forearm size (cm)</string>
    <string name="hometown_hint">Hometown </string>
    <string name="bicep_size_text_cm">Bicep size (cm)</string>
    <string name="default_bio">GRIP AND RIP!</string>
    <string name="enter_bio_text">Tell people about yourself!</string>
    <string name="profile_menu_text">Profile</string>
    <string name="home_menu_text">Home</string>
    <string name="edit_profile">Edit</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="find_a_partner">Find a partner</string>
    <string name="videos">Videos</string>
    <string name="popular_videos">Popular videos</string>
    <string name="tutorial_videos">Tutorial videos</string>
    <string name="popular_youtube_channels">Popular YouTube channels</string>

    <string-array name="weight_classes">
        <item>Female weight classes</item>
        <item>0-50 kg</item>
        <item>55 kg</item>
        <item>60 kg</item>
        <item>65 kg</item>
        <item>70 kg</item>
        <item>80 kg</item>
        <item>+80 kg</item>
        <item>Male weight classes</item>
        <item>0-55 kg</item>
        <item>60 kg</item>
        <item>65 kg</item>
        <item>70 kg</item>
        <item>75 kg</item>
        <item>80 kg</item>
        <item>85 kg</item>
        <item>90 kg</item>
        <item>100 kg</item>
        <item>110 kg</item>
        <item>+110 kg</item>
    </string-array>

    <string-array name="clubs">
        <item>None</item>
        <item>Arvidsjaur Armsport Idrottsklubb</item>
        <item>Blue-Lake Armsport IF</item>
        <item>Drakbrytarnas Idrottsförening</item>
        <item>Ekerö Idrottsklubb</item>
        <item>Falkenbergs Armsportklubb</item>
        <item>Flen Sport &amp; Hälsa Idrottsförening</item>
        <item>Föreningen Brynäs Armwrestling</item>
        <item>Föreningen Dalabrytarna</item>
        <item>Föreningen Flens Armfighters</item>
        <item>Föreningen Göteborg Armsport</item>
        <item>Föreningen Northern Arms</item>
        <item>Föreningen Storuman Armsport Lappmarken</item>
        <item>Föreningen Strömbrytarna</item>
        <item>Föreningen Trollhättans Armsport</item>
        <item>Fränsta Armsport Klubb</item>
        <item>Fyshuset Sport Klubb Gefle</item>
        <item>Hälsingland Arms IF</item>
        <item>Hammarby IF Armbrytarförening</item>
        <item>Hedemora Armsports Klubb</item>
        <item>Iron Arms Wexio IF</item>
        <item>Jönköping Armbrytarklubb</item>
        <item>Lycksele Armfighters Club hos Trim 365</item>
        <item>Nora Atletklubb</item>
        <item>Örnsköldsviks Atletklubb</item>
        <item>Rauk Arm &amp; Storsudrets Armbrytarklubb</item>
        <item>Skänninge Armbrytarklubb</item>
        <item>Storsjöbrytarna Armbrytarklubb</item>
        <item>Studentidrotten i Luleå</item>
        <item>Svanskogs IF</item>
        <item>Tassbrottarna ArmBrytningsKlubb</item>
        <item>Vätternbrytarna Motala Armbrytarklubb</item>
        <item>Viking Kraftsport IF</item>
    </string-array>

    <string-array name="hands">
        <item>Left hand</item>
        <item>Right hand</item>
        <item>Both</item>

    </string-array>

    <string-array name="sexes">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_find_partner">Map</string>
    <string name="menu_search">Search</string>
    <string name="Users">Users</string>
    <string name="Clubs">Clubs</string>
    <string name="new_user_text">New user?</string>
    <string name="logo_text">logo</string>
    <string name="select_photo_text">Select photo</string>
    <string name="add_photo_text_view">Add photo</string>
    <string name="find_armwrestlers">FIND ARMWRESTLERS NEAR YOU</string>
    <string name="practice">PRACTICE</string>
    <string name="champion"> CHAMPION!</string>
    <string name="become_a">PRACTICE, BECOME A</string>
    <string name="armbets_tv">ARMBETS TV</string>
    <string name="armwrestling_tv">ARMWRESTLING TV</string>
    <string name="devonlarratt">DEVONLARRATT</string>
    <string name="global_arm_wresting">GLOBAL\nARMWRESTLING</string>
    <string name="ryan_bowen">RYANBOWEN</string>
    <string name="sweden_awtv">SATV</string>
    <string name="voice_of_armw">VOICE OF\nARMWRESTLING</string>
    <string name="wal">WAL</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="learn_more">Learn more</string>
    <string name="profile_club_text">Club</string>
    <string name="Hand">Hand</string>
    <string name="here">here</string>
    <string name="hometown_create_prof">Hometown:</string>
    <string name="chat_default_hint">Aa</string>
    <string name="Ghost">Ghost mode:</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>