<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/users"
        android:title="@string/Users"
        app:showAsAction="always" />
    <item
        android:id="@+id/clubs"
        android:title="@string/Clubs"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />
    <item android:id="@+id/action_home"
        android:title="@string/home_menu_text"
        app:showAsAction="never"/>
    <item android:id="@+id/action_profile"
        android:title="@string/profile_menu_text"
        app:showAsAction="never" />
    <item android:id="@+id/action_find_partner"
        android:title="@string/find_a_partner"
        app:showAsAction="never" />
    <item android:id="@+id/action_signout"
        android:title="@string/signout"
        app:showAsAction="never"/>
</menu>