<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/home_menu_text"
        android:icon="@drawable/hometown"
        app:showAsAction="never"/>

    <item android:id="@+id/action_profile"
        android:title="@string/profile_menu_text"
        android:icon="@drawable/user_icon"
        app:showAsAction="never" />

    <item android:id="@+id/action_find_partner"
        android:title="@string/find_a_partner"
        android:icon="@drawable/search_map_button"
        app:showAsAction="never" />

    <item android:id="@+id/action_signout"
        android:title="@string/signout"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="never"/>

</menu>