<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LogInActivity"
    android:background="@android:color/black">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/armwrestling_logo"
            android:contentDescription="TODO" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:alpha="0.9"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"
            android:alpha="0.9"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:textColor="@android:color/holo_red_dark"
            android:background="@drawable/contrast_button"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/login_text"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/or_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/or_text"
            android:textColor="@color/hintTextWhiteIsh"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_account_button_login"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border_bg"
            android:padding="10dp"
            android:textStyle="normal"
            android:text="@string/new_user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>

        <ProgressBar
            android:id="@+id/progressbar_login"
            style="?android:attr/progressBarStyle"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</LinearLayout>