<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity"
    android:background="@android:color/black"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acc_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/armwrestling_logo"/>

        <EditText
            android:id="@+id/username_acc"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:alpha="0.9"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:alpha="0.9"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_account"
            android:alpha="0.9"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@android:color/black"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_account_button"
            android:textColor="@android:color/holo_red_dark"
            android:background="@drawable/contrast_button"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/create_acc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progressbar_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="?android:attr/progressBarStyle"
            android:indeterminateDrawable="@drawable/progress"
            />

    </LinearLayout>

</LinearLayout>