<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".CreateUserProfileActivity">


    <ImageButton
        android:id="@+id/profile_picture_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@android:drawable/ic_menu_camera"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/create_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/username_hint"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/user_bio_profile_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_bio_text"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintTextWhiteIsh"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_picture_button"
        app:layout_constraintTop_toBottomOf="@+id/create_profile_username"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="360dp"
        android:layout_height="264dp"
        android:background="@drawable/form_background"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_button"
        app:layout_constraintVertical_bias="0.135">

        <ImageView
            android:id="@+id/user_sex_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/sex" />

        <Spinner
            android:id="@+id/user_sex_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_toEndOf="@id/user_sex_image" />

        <ImageView
            android:id="@+id/height_image_account_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_sex_image"
            android:contentDescription="TODO"
            android:src="@drawable/height" />

        <EditText
            android:id="@+id/height_text_view_profile_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_sex_spinner"
            android:layout_toEndOf="@id/height_image_account_creation"
            android:autofillHints=""
            android:fontFamily="@font/roboto_thin"
            android:ems="10"
            android:hint="@string/height_cm"
            android:inputType="number"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/forearm_measurement_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/height_image_account_creation"
            android:contentDescription="TODO"
            android:src="@drawable/measurement" />

        <EditText
            android:id="@+id/forearm_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/height_text_view_profile_creation"
            android:layout_toEndOf="@id/forearm_measurement_image"
            android:fontFamily="@font/roboto_thin"
            android:ems="10"
            android:hint="@string/forearm_size_cm"
            android:inputType="number"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/bicep_measurement_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forearm_measurement_image"
            android:contentDescription="TODO"
            android:src="@drawable/measurement" />

        <EditText
            android:id="@+id/bicep_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forearm_size_edit_text"
            android:layout_toEndOf="@id/bicep_measurement_image"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/bicep_size_text_cm"
            android:inputType="number"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/weight_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bicep_measurement_image"
            android:contentDescription="TODO"
            android:src="@drawable/weight" />

        <Spinner
            android:id="@+id/weight_class_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/bicep_size_edit_text"
            android:layout_toEndOf="@id/weight_image" />

        <ImageView
            android:id="@+id/user_location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_image"
            android:contentDescription="TODO"
            android:src="@drawable/hometown" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_class_spinner"
            android:layout_toEndOf="@id/user_location_image"
            android:ems="10">
            <fragment android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
        </androidx.cardview.widget.CardView>
        <!--<EditText
            android:id="@+id/hometown_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_class_spinner"
            android:layout_toEndOf="@id/user_location_image"
            android:autofillHints=""
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/hometown_hint"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" /> -->

    </RelativeLayout>

    <Button
        android:id="@+id/create_acc_save_button"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:background="@drawable/button_border_bg"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.154" />

    <ProgressBar
        android:id="@+id/profile_creation_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_acc_save_button"
        app:layout_constraintVertical_bias="0.125" />



</androidx.constraintlayout.widget.ConstraintLayout>