<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.umu.se.dalo0013.naw.HomePageActivity"
    android:background="@android:color/black">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/armwrestling_logo"
        android:contentDescription="TODO" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_slogan"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/hintTextWhiteIsh" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_videos"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tutorial_videos_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_videos"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_videos-recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_youtube_channels"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/profile_pic_me"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="10dp"/>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>